@@ -23,11 +23,11 @@ proc.time()
 \note{
 #ifdef unix
   It is possible to compile \R without support for \code{proc.time},
-  when the function will not exist.
+  when the function will throw an error.
 #endif
 #ifdef windows
   CPU times will be returned as \code{NA} on Windows 9x/ME systems, but
-  are genuine times on NT4/2000/XP systems. Times of child processes are
+  are genuine times on NT4/2000/XP systems.  Times of child processes are
   not available and will always be given as \code{NA}.
 #endif
 }
