@@ -1,15 +1,15 @@
 \name{system.time}
 \title{CPU Time Used}
 \usage{
-system.time(expr, gcFirst)
-unix.time(expr, gcFirst)
+system.time(expr, gcFirst = TRUE)
+unix.time(expr, gcFirst = TRUE)
 }
 \alias{system.time}
 \alias{unix.time}
 \arguments{
   \item{expr}{Valid \R expression to be \dQuote{timed}}
   \item{gcFirst}{Logical - should a garbage collection be performed
-    immediately before the timing?  Default is \code{FALSE}.}
+    immediately before the timing?  Default is \code{TRUE}.}
 }
 \description{Return CPU (and other) times that \code{expr} used.
 }    
@@ -17,9 +17,6 @@ unix.time(expr, gcFirst)
   \code{system.time} calls the builtin \code{\link{proc.time}},
   evaluates \code{expr}, and then calls \code{proc.time} once more,
   returning the difference between the two \code{proc.time} calls.
-
-  The values returned by the \code{proc.time} are (on Unix) those
-  returned by the C library function \code{times}(3v), if available.
 
   \code{unix.time} is an alias of \code{system.time}, for
   compatibility reasons.
@@ -35,6 +32,7 @@ unix.time(expr, gcFirst)
   subproc1, subproc2 times. The subproc times are the user and
   system cpu time used by child processes (and so are usually zero).
 #ifdef windows
+
   On Windows the subproc times are not available and so are always
   \code{NA}. The first two components are not available on Windows 9x,
   and so are reported as \code{NA}; they do return real values on
@@ -48,7 +46,7 @@ unix.time(expr, gcFirst)
 #ifdef unix
 \note{
   It is possible to compile \R without support for \code{system.time},
-  when all the values will be \code{NA}.
+  when the function will throw an error.
 }
 #endif
 \seealso{
